--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
 	box-sizing: border-box;
 	margin: 0;
-    background-color: darkslateblue;
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
+    background-attachment:fixed;
 }
 
 div{
@@ -20,10 +21,10 @@ div, small{
 }
 
 small{
-    font-size: 17px;
+    font-size: 20px;
     position: absolute;
-    bottom: 0;
+    top: 0;
     right: 0;
-    margin-bottom: 1%;
+    margin-top: 1%;
     margin-right: 1%;
 }
